# pico-projects

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
examples/: CMakeLists.txt
examples/get_mac_example/: CMakeLists.txt  get_mac_address.c
src/: CMakeLists.txt
src/flash/: CMakeLists.txt  flash.c
src/wifi/chip_info/: CMakeLists.txt  chip_info.c
